--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,39 @@ body {
   background-color: #f5f5f5;
   font-family: 'Roboto', sans-serif;
 }
+
+.on-hover-underline {
+  color: black;
+  text-decoration: none;
+}
+
+.on-hover-underline:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+.on-hover-zoom:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.on-hover-shadow:hover {
+  -webkit-box-shadow: 0px 0px 5px #cacaca;
+          box-shadow: 0px 0px 5px #cacaca;
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
+}
+
+.colr-aiub-blue {
+  color: #0072bc;
+}
+
+.top-aiub-blue-border {
+  border-top: 5px solid #0072bc;
+  margin: 0;
+}
+
+.justify-text {
+  text-align: justify;
+}
 /*# sourceMappingURL=style.css.map */
