--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,40 @@
+$aiub-blue: #0072bc;
 body {
     background-color: #f5f5f5;
     font-family: 'Roboto', sans-serif;
+}
+
+.on-hover-underline {
+    color: black;
+    text-decoration: none;
+    &:hover {
+        color: black;
+        text-decoration: underline;
+    }
+}
+
+.on-hover-zoom {
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+.on-hover-shadow {
+    &:hover {
+        box-shadow: 0px 0px 5px #cacaca;
+        transform: scale(1.02);
+    }
+}
+
+.colr-aiub-blue {
+    color: $aiub-blue;
+}
+
+.top-aiub-blue-border {
+    border-top: 5px solid $aiub-blue;
+    margin: 0;
+}
+
+.justify-text {
+    text-align: justify;
 }
