--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,209 @@
 body {
-  background-color: #f5f5f5;
-  font-family: 'Roboto', sans-serif;
+    background-color: #f5f5f5;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+.scrollable-element {
+    scrollbar-color: red yellow;
+}
+
+#gototop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #0072bc;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 15px;
+}
+
+#gototop:hover {
+    background-color: #9e9e9e;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.fsc-10 {
+    font-size: 10px;
+}
+
+.fsc-11 {
+    font-size: 11px;
+}
+
+.fsc-12 {
+    font-size: 12px;
+}
+
+.fsc-13 {
+    font-size: 13px;
+}
+
+.fsc-14 {
+    font-size: 14px;
 }
 
 .on-hover-underline {
-  color: black;
-  text-decoration: none;
+    color: black;
+    text-decoration: none;
 }
 
 .on-hover-underline:hover {
-  color: black;
-  text-decoration: underline;
+    color: black;
+    text-decoration: underline;
 }
 
 .on-hover-zoom:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
 }
 
 .on-hover-shadow:hover {
-  -webkit-box-shadow: 0px 0px 5px #cacaca;
-          box-shadow: 0px 0px 5px #cacaca;
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
+    -webkit-box-shadow: 0px 0px 5px #cacaca;
+    box-shadow: 0px 0px 5px #cacaca;
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
 }
 
 .colr-aiub-blue {
-  color: #0072bc;
+    color: #0072bc;
 }
 
 .top-aiub-blue-border {
-  border-top: 5px solid #0072bc;
-  margin: 0;
+    border-top: 5px solid #0072bc;
+    margin: 0;
 }
 
 .justify-text {
-  text-align: justify;
+    text-align: justify;
 }
+
+.bg-research {
+    width: 100%;
+    height: 350px;
+    background: url(/images/research.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.bg-img-gallery {
+    width: 100%;
+    height: 350px;
+    background: url(/images/aiub17.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #0072bc;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 99;
+    background-color: #f5f5f5;
+    border-top: solid 1px #e5e5e5;
+    border-bottom: solid 1px #e5e5e5;
+    padding: 10px 0;
+}
+
+nav ul {
+    list-style: none;
+    margin: auto 90px;
+}
+
+nav ul li {
+    position: relative;
+    float: left;
+}
+
+nav ul li a {
+    font-size: 16px;
+    font-weight: lighter;
+    padding: 10px 8px;
+    color: black;
+    text-decoration: none;
+    display: block;
+}
+
+nav ul li a:hover {
+    border-top: solid 4px #0072bc;
+    background-color: #cacaca;
+}
+
+nav ul li ul {
+    position: absolute;
+    left: 100;
+    width: 210px;
+    background-color: #f5f5f5;
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px #cacaca;
+    display: none
+}
+
+nav ul li ul li {
+    width: 100%;
+}
+
+nav ul li ul li ul {
+    left: 80px;
+    top: 0;
+}
+
+nav ul li:focus-within>ul,
+nav ul li:hover>ul {
+    display: initial;
+}
+
+@media(max-width: 992px) {
+    nav {
+        position: relative;
+        top: 100%;
+        left: 0;
+        right: 0;
+    }
+    nav ul li {
+        width: 100%;
+    }
+    nav ul li ul {
+        width: 100%;
+        position: relative;
+    }
+    nav ul li ul li {
+        background: #f5f5f5;
+    }
+    nav ul li ul li ul {
+        width: 100%;
+        left: 0;
+    }
+}
+
+
 /*# sourceMappingURL=style.css.map */
