--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,50 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.scrollable-element {
+    scrollbar-color: red yellow;
+}
+
+#gototop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: $aiub-blue;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 15px;
+    &:hover {
+        background-color: rgb(158, 158, 158);
+        transform: scale(1.1);
+    }
+}
+
+.fsc-10 {
+    font-size: 10px;
+}
+
+.fsc-11 {
+    font-size: 11px;
+}
+
+.fsc-12 {
+    font-size: 12px;
+}
+
+.fsc-13 {
+    font-size: 13px;
+}
+
+.fsc-14 {
+    font-size: 14px;
+}
+
 .on-hover-underline {
     color: black;
     text-decoration: none;
@@ -16,6 +60,7 @@ body {
 .on-hover-zoom {
     &:hover {
         transform: scale(1.1);
+        transition: 0.5s;
     }
 }
 
@@ -23,6 +68,7 @@ body {
     &:hover {
         box-shadow: 0px 0px 5px #cacaca;
         transform: scale(1.02);
+        transition: 0.5s;
     }
 }
 
@@ -37,4 +83,182 @@ body {
 
 .justify-text {
     text-align: justify;
+}
+
+.bg-research {
+    width: 100%;
+    height: 350px;
+    background: url(/images/research.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.bg-img-gallery {
+    width: 100%;
+    height: 350px;
+    background: url(/images/aiub17.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+// scroll bar style change
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $aiub-blue;
+}
+
+// nav {
+//     position: sticky;
+//     top: 0;
+//     z-index: 100;
+//     background-color: #f5f5f5;
+//     border-top: solid 1px #e5e5e5;
+//     border-bottom: solid 1px #e5e5e5;
+//     padding: 10px 0;
+//     ul {
+//         position: relative;
+//         margin: auto 90px;
+//         a {
+//             color: black;
+//             text-decoration: none;
+//             padding: 12px 10px;
+//             &:hover {
+//                 border-top: solid 4px $aiub-blue;
+//                 background-color: #cacaca;
+//                 color: black;
+//             }
+//         }
+//         li {
+//             display: inline-block;
+//             margin: 5px 5px;
+//             ul {
+//                 display: none;
+//                 position: absolute;
+//                 top: 110%;
+//                 left: 0;
+//                 padding: 0;
+//                 background-color: #f5f5f5;
+//                 border-radius: 3px;
+//                 box-shadow: 0px 0px 5px #cacaca;
+//                 li {
+//                     padding: 10px 5px;
+//                     position: relative;
+//                     margin: 0;
+//                     a {
+//                         padding: 12px 10px;
+//                     }
+//                     ul {
+//                         position: absolute;
+//                         left: 20px;
+//                         top: 0;
+//                     }
+//                 }
+//             }
+//             &:hover>ul {
+//                 z-index: 100;
+//                 display: flex;
+//                 flex-direction: column;
+//             }
+//         }
+//     }
+// }
+// nav {
+//     height: 60px;
+//     background: #2c3e50;
+//     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+//     &::after {
+//         content: '';
+//         display: table;
+//         clear: both;
+//     }
+//     ul {
+//         float: right;
+//         list-style: none;
+//         margin-right: 10px;
+//         position: relative;
+//         li {
+//             float: left;
+//             display: inline-block;
+//             background: black;
+//             margin: 0 5px;
+//             a {
+//                 color: white;
+//                 text-decoration: none;
+//                 line-height: 50px;
+//                 font-size: 15px;
+//                 padding: 8px 15px;
+//                 &:hover {
+//                     color: #f5f5f5;
+//                     box-shadow: 0 2px #33ffff, 0 0 2px #66ffff;
+//                     border-radius: 5px;
+//                 }
+//             }
+//             &:hover>ul {
+//                 z-index: 500;
+//                 opacity: 1;
+//                 visibility: visible;
+//             }
+//         }
+//         ul {
+//             position: absolute;
+//             top: 100%;
+//             opacity: 0;
+//             visibility: hidden;
+//             li {
+//                 position: relative;
+//                 margin: 0;
+//                 width: 150px;
+//                 float: none;
+//                 display: list-item;
+//                 border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+//                 a {
+//                     color: white;
+//                     text-decoration: none;
+//                     line-height: 50px;
+//                     font-size: 15px;
+//                     padding: 8px 15px;
+//                     &:hover {
+//                         color: #f5f5f5;
+//                         box-shadow: 0 2px #33ffff, 0 0 2px #66ffff;
+//                         border-radius: 5px;
+//                     }
+//                 }
+//                 &:hover>ul {
+//                     z-index: 500;
+//                     opacity: 1;
+//                     visibility: visible;
+//                 }
+//             }
+//             ul {
+//                 li {
+//                     position: relative;
+//                     top: 0px;
+//                     left: 118px;
+//                 }
+//             }
+//         }
+//     }
+// }
+@media all and (min-width: 992px) {
+    .navbar .nav-item .dropdown-menu {
+        display: none;
+    }
+    .navbar .nav-item:hover .nav-link {}
+    .navbar .nav-item:hover .dropdown-menu {
+        display: block;
+    }
+    .navbar .nav-item .dropdown-menu {
+        margin-top: 0;
+    }
 }
