--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body {
     background-color: #f5f5f5;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     box-sizing: border-box;
 }
 
